--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -133,61 +133,56 @@
 
                 <!-- Grupos -->
 
-                <div class="col-sm-12 col-md-12 col-lg-12">
-                  <div class="grupos">
+                  <div class="col-lg-10 col-md-12 col-sm-12 grupos">
                      <span id="close-grupos" class="fa fa-close fa-2x"></span>
                       <h3 class="grupos-title">Grupos de {{ user_profile.username }}</h3>
-                      <div class="wrapper-grupos">
-                          <div class="grupo-user">
+                      <div class="col-lg-12 col-md-12 col-sm-12 wrapper-grupos">
+                          <div class="col-lg-2 col-md-5 col-sm-12 grupo-user">
                               <img src="{{STATIC_URL}}img/2.jpg"  alt="img-group">
                               <span class="text-description">Nombre del grupo</span>
                               <i class="fa fa-users"> 50</i>
                               <i class="fa fa-heart"> 12</i>
                           </div>
-                          <div class="grupo-user">
-                               <img src="{{STATIC_URL}}img/2.jpg"  alt="img-group">
-                              <span class="text-description">Nombre del grupo</span>
-                          </div>
-                          <div class="grupo-user">
-                               <img src="{{STATIC_URL}}img/2.jpg"  alt="img-group">
-                              <span class="text-description">Nombre del grupo</span>
-                          </div>
-                          <div class="grupo-user">
-                               <img src="{{STATIC_URL}}img/2.jpg"  alt="img-group">
-                              <span class="text-description">Nombre del grupo</span>
-                          </div>
-                          <div class="grupo-user">
-                               <img src="{{STATIC_URL}}img/2.jpg"  alt="img-group">
-                              <span class="text-description">Nombre del grupo</span>
-                          </div>
-                          <div class="grupo-user">
-                               <img src="{{STATIC_URL}}img/2.jpg"  alt="img-group">
-                              <span class="text-description">Nombre del grupo</span>
-                          </div>
-                          <div class="grupo-user">
-                               <img src="{{STATIC_URL}}img/2.jpg"  alt="img-group">
-                              <span class="text-description">Nombre del grupo</span>
-                          </div>
-                          <div class="grupo-user">
+                          <div class="col-lg-2 col-md-5 col-sm-12 grupo-user">
                               <img src="{{STATIC_URL}}img/2.jpg"  alt="img-group">
                               <span class="text-description">Nombre del grupo</span>
+                              <i class="fa fa-users"> 50</i>
+                              <i class="fa fa-heart"> 12</i>
                           </div>
-                          <div class="grupo-user">
+                          <div class="col-lg-2 col-md-5 col-sm-12 grupo-user">
                               <img src="{{STATIC_URL}}img/2.jpg"  alt="img-group">
                               <span class="text-description">Nombre del grupo</span>
+                              <i class="fa fa-users"> 50</i>
+                              <i class="fa fa-heart"> 12</i>
                           </div>
-                          <div class="grupo-user">
+                          <div class="col-lg-2 col-md-5 col-sm-12 grupo-user">
                               <img src="{{STATIC_URL}}img/2.jpg"  alt="img-group">
                               <span class="text-description">Nombre del grupo</span>
+                              <i class="fa fa-users"> 50</i>
+                              <i class="fa fa-heart"> 12</i>
                           </div>
-                          <div class="grupo-user">
+                          <div class="col-lg-2 col-md-5 col-sm-12 grupo-user">
                               <img src="{{STATIC_URL}}img/2.jpg"  alt="img-group">
                               <span class="text-description">Nombre del grupo</span>
+                              <i class="fa fa-users"> 50</i>
+                              <i class="fa fa-heart"> 12</i>
+                          </div>
+                          <div class="col-lg-2 col-md-5 col-sm-12 grupo-user">
+                              <img src="{{STATIC_URL}}img/2.jpg"  alt="img-group">
+                              <span class="text-description">Nombre del grupo</span>
+                              <i class="fa fa-users"> 50</i>
+                              <i class="fa fa-heart"> 12</i>
+                          </div>
+                          <div class="col-lg-2 col-md-5 col-sm-12 grupo-user">
+                              <img src="{{STATIC_URL}}img/2.jpg"  alt="img-group">
+                              <span class="text-description">Nombre del grupo</span>
+                              <i class="fa fa-users"> 50</i>
+                              <i class="fa fa-heart"> 12</i>
                           </div>
                       </div>
 
                   </div>
-                </div>
+
           <header>
             <p>@{{ user_profile.username }}</p><p id="profileId" hidden>{{ user_profile.profile.id }}</p>
             <div class="status">{{ user_profile.profile.status }}</div>
