--- a/skyfolk/static/css/colorbox.css
+++ b/skyfolk/static/css/colorbox.css
@@ -14,12 +14,12 @@
 .cboxIframe{width:100%; height:100%; display:block; border:0;}
 #colorbox, #cboxContent, #cboxLoadedContent{box-sizing:content-box;}
 
-/* 
+/*
     User Style:
     Change the following styles to modify the appearance of ColorBox.  They are
     ordered & tabbed in a way that represents the nesting of the generated HTML.
 */
-#cboxOverlay{background:url(images/overlay.png) repeat 0 0;}
+#cboxOverlay{background: rgba(238, 238, 238, 0.5);}
 #colorbox{}
     #cboxTopLeft{width:21px; height:21px; background:url(controls.png) no-repeat -101px 0;}
     #cboxTopRight{width:21px; height:21px; background:url(controls.png) no-repeat -130px 0;}
