--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1374,7 +1374,7 @@ ul.table > li {
     display: inline;
     margin-top: 7px;
     margin-right: 7px;
-    color: #424242;
+    color: #1e88e5;
     font-size: 20px;
     cursor: pointer;
     -webkit-transition: all .1s ease-in-out;
@@ -1382,7 +1382,7 @@ ul.table > li {
      transition: all .1s ease-in-out;
    }
    .trofeos .fa-close:hover, .grupos .fa-close:hover {
-    color: #1976d2;
+    opacity: 0.8;
    }
    .trofeos .trofeos-title {
     text-align: center;
@@ -1430,66 +1430,62 @@ ul.table > li {
    /* GRUPOS */
 
    .grupos {
-    width: 50%;
-    top: 100px;
-    left: 25.55502%;
-    display: none;
-    height: auto;
-    min-height: 600px;
-    background-color: #fff;
-    position: absolute;
-    margin: auto;
-    z-index: 9999;
+      position: absolute;
+      z-index: 9999;
+      left: 0;
+      right: 0;
+      margin-right: auto;
+      margin-left: auto;
+      background-color: #fafafa;
+      top: 10%;
+      box-shadow: 0 1px 5px rgba(0, 0, 0, 0.5);
    }
    .grupos .grupos-title {
     text-align: center;
     margin: auto;
-    color: #e0e0e0;
+    color: #212121;
     font-size: 2em;
     padding-bottom: 10px;
     font-weight: 100;
     margin-bottom: 10px;
     margin-top: 10px;
-    border-bottom: 1px solid #e0e0e0;
+    border-bottom: 1px solid #212121;
     width: 80%;
+   }
 
-   }
-   .grupos .wrapper-grupos {
-    position: relative;
-    margin: auto;
-    width: 95%;
-    height: auto;
-   }
    .grupos .grupo-user {
-    position: relative;
     display: inline-block;
     background-color: #000;
-    width: 190px;
-    height: 150px;
-    margin: 14px;
+    height: 160px;
+    margin-left: 43px;
+    margin-top: 20px;
+    margin-bottom: 20px;
    }
    .grupos img {
     width: 100%;
     height: 100%;;
    }
    .grupos .text-description {
-    position: absolute;
-    top: 70%;
-    font-size: 1.3em;
-    color: #000;
+    position: relative;
+    top: -90%;
+    font-size: 1.4em;
+    color: #fff;
     font-weight: 400;
     margin-left: 7px;
    }
-    .grupos .fa-users{
-    position: absolute;
-    top: 85%;
+  .grupos .fa-users{
+    position: relative;
+    margin-top: -30px;
+    float: left;
     margin-left: 7px;
+    color: #fff;
    }
-    .grupos .fa-heart{
-    position: absolute;
-    top: 85%;
-    right: 0;
+  .grupos .fa-heart{
+    position: relative;
+    margin-top: -30px;
+    float: right;
     margin-right: 7px;
+    color: #fff;
   }
   .grupos .fa-users:hover {
     color: #1e88e5;
