--- a/skyfolk/static/css/setup.css
+++ b/skyfolk/static/css/setup.css
@@ -1,4 +1,5 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300);
+@import url(https://fonts.googleapis.com/css?family=Pacifico);
 
 body {
 	background-color: #efefef;
@@ -17,19 +18,28 @@ body {
 }
 .display-info-reset-password h6 {
 	color: #bdbdbd;
-	margin-top: 10px;
+	font-size: 1.45em;
+	display: inline-block;
 }
-.display-info-reset-password .skyfolk-logo {
+.display-info-reset-password .logotipo_skyfolk {
 	position: relative;
 	float: left;
+	display: inline-block;
 }
-
-.display-info-reset-password .skyfolk-logo img {
-	width: 120px;
-	margin-top: -40px;
-	height: 120px;
+.display-info-reset-password .logotipo_skyfolk h5 {
+	font-family: 'Pacifico', cursive;
+	font-size: 1.45em;
+	display: inline-block;
+	margin-right: 20px;
+	margin-left: 7px;
+	margin-top: 4px;
+	cursor: pointer;
+	color: #555;
 }
-
+.display-info-reset-password .logotipo_skyfolk i {
+	color: #0096d7;
+	text-shadow: 1px 1px 1px #ccc;
+}
 .menu {
 	position: relative;
 	width: 400px;
