--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1439,6 +1439,7 @@ ul.table > li {
       background-color: #fafafa;
       top: 10%;
       box-shadow: 0 1px 5px rgba(0, 0, 0, 0.5);
+      display: none;
    }
    .grupos .grupos-title {
     text-align: center;
