--- a/skyfolk/templates/account/amigos.html
+++ b/skyfolk/templates/account/amigos.html
@@ -1,6 +1,8 @@
 {% extends 'account/base_interface.html' %}
 {% load app_filters %}
 
+{% block title %} <title>Seguidores {{ request.user.username }}</title> {% endblock %}
+
 {% block extra-css %}
     <link type="text/css" rel="stylesheet" href="{{STATIC_URL}}css/amigos.css"/>
     <link rel="stylesheet" href="{{STATIC_URL}}css/miperfil.css"/>
