--- a/skyfolk/templates/account/search.html
+++ b/skyfolk/templates/account/search.html
@@ -1,5 +1,8 @@
 {% extends 'account/base_search.html' %}
 
+{% block title %} <title>Búsqueda en Skyfolk.</title> {% endblock %}
+
+
 {% block content %}
 <div class="container">
 <div class="col-lg-12 col-md-10 col-sm-12">
