--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1357,17 +1357,25 @@ ul.table > li {
     border: 2px solid rgba(25,118,210,1);
    }
    .trofeos {
-    width: 50%;
-    left: 25.55502%;
-    top: 100px;
-    display: none;
-    height: auto;
-    min-height: 400px;
-    background-color: #fff;
-    position: absolute;
-    margin: auto;
-    z-index: 9999;
-    border-radius: 3px;
+     position: absolute;
+     z-index: 9999;
+     left: 0;
+     right: 0;
+     margin-right: auto;
+     margin-left: auto;
+     background-color: #fafafa;
+     top: 10%;
+     box-shadow: 0 1px 5px rgba(0, 0, 0, 0.5);
+     display: block;
+   }
+   .trofeos .trofeo-user {
+    height: 90px;
+    display: inline-block;
+    border-radius: 100%;
+    background-color: transparent;
+    border: 5px solid #1e88e5;
+    margin-left: 50px;
+    margin-top: 15px;
    }
    .trofeos .fa-close, .grupos .fa-close {
     float:right;
@@ -1385,17 +1393,16 @@ ul.table > li {
     opacity: 0.8;
    }
    .trofeos .trofeos-title {
-    text-align: center;
-    margin: auto;
-    color: #e0e0e0;
-    font-size: 2em;
-    padding-bottom: 10px;
-    font-weight: 100;
-    margin-bottom: 10px;
-    margin-top: 10px;
-    border-bottom: 1px solid #e0e0e0;
-    width: 80%;
-
+     text-align: center;
+     margin: auto;
+     color: #212121;
+     font-size: 2em;
+     padding-bottom: 10px;
+     font-weight: 100;
+     margin-bottom: 10px;
+     margin-top: 10px;
+     border-bottom: 1px solid #212121;
+     width: 80%;
    }
    .trofeos .wrapper-trofeos {
     position: relative;
@@ -1404,18 +1411,6 @@ ul.table > li {
     margin-left: 7%;
     height: 570px;
 
-   }
-   .trofeos .trofeo-desb {
-    display: list-item;
-    list-style-type: none;
-    margin-top: 17px;
-    background-color: #80cbc4;
-    border-bottom-left-radius: 30px;
-    border-top-left-radius: 30px;
-    margin-bottom: 10px;
-    -webkit-box-shadow: -6px -3px 8px 0px rgba(50, 50, 50, 0.75);
-    -moz-box-shadow:    -6px -3px 8px 0px rgba(50, 50, 50, 0.75);
-    box-shadow:         -6px -3px 8px 0px rgba(50, 50, 50, 0.75);
    }
    .trofeos img {
     width: 60px;
