--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -109,28 +109,19 @@
                 </div>
 
                 <!-- Trofeos -->
-                <div class="col-sm-12 col-md-12 col-lg-12">
-                  <div class="trofeos">
+                  <div class="col-sm-12 col-md-12 col-lg-10 trofeos">
                      <span id="close-trofeos" class="fa fa-close fa-2x"></span>
                       <h3 class="trofeos-title">Logros de {{ user_profile.username }}</h3>
-                      <div class="wrapper-trofeos">
-                          <div class="col-sm-3 col-md-3 col-lg-4">
-                            <span class="trofeo-desb"><i class="fa fa-heart fa-lg"></i>
-                            </span>
+                      <div class="col-lg-12 col-md-12 col-sm-12 wrapper-trofeos">
+                          <div class="col-sm-3 col-md-3 col-lg-1 trofeo-user">
                           </div>
-                          <div class="col-sm-3 col-md-3 col-lg-4">
-                            <span class="trofeo-desb"><i class="fa fa-heart fa-lg"></i>
-                            </span>
+                          <div class="col-sm-3 col-md-3 col-lg-1 trofeo-user">
                           </div>
-                        <div class="col-sm-3 col-md-3 col-lg-4">
-                            <span class="trofeo-desb"><i class="fa fa-heart fa-lg"></i>
-                            </span>
+                          <div class="col-sm-3 col-md-3 col-lg-1 trofeo-user">
                           </div>
 
                       </div>
                   </div>
-                </div>
-
                 <!-- Grupos -->
 
                   <div class="col-lg-10 col-md-12 col-sm-12 grupos">
