--- a/skyfolk/templates/account/password_change.html
+++ b/skyfolk/templates/account/password_change.html
@@ -1,21 +1,26 @@
 {% extends "account/base_cf.html" %}
 
+{% block additional_files %}
+
+{% endblock %}
+
 {% load url from future %}
 {% load i18n %}
 
 {% block cf-title %}
-	<h4 class="cn"> Contraseña </h4>
-	<h6 class="ch"> Cambia tu contraseña o recupera tu contraseña actual.</h6>
+	<hgroup>
+		<h4 class="cn"> Contraseña </h4>
+		<h6 class="ch"> Cambia tu contraseña o recupera tu contraseña actual.</h6>
+	</hgroup>
 {% endblock %}
 
 
 {% block cf-form %}
-<div id="contra-2">
-    <form method="POST" id="form-changepass" action="{% url 'account_change_password' %}" class="password_change">
+<div class="col-lg-12 col-md-12 col-sm-12 wrapper-profilex">
+	  <form method="POST" id="form-changepass" action="{% url 'account_change_password' %}" class="password_change">
         {% csrf_token %}
         {{ form.as_p }}
-        <!--<button type="submit" name="action">{% trans "Change Password" %}</button>-->
-        <button class="btn btn-info" id="btn" type="submit" name="action">Salvar cambios</button>
+        <button class="btn btn-info" id="btn" type="submit" name="action">{% trans "Change Password" %}</button>
     </form>
 	</div>
 {% endblock %}
