--- a/skyfolk/templates/account/base-header.html
+++ b/skyfolk/templates/account/base-header.html
@@ -74,6 +74,7 @@
         </div>
       </div>
     </div>
+      <div id="loader"></div>
     </nav>
     <script src="{{STATIC_URL}}js/jquery.min.js"></script>
     <script src="{{STATIC_URL}}js/jquery-ui.js"></script>
