+ Version V1 + Logo definitivo

--- a/skyfolk/templates/account/base_login-signup.html
+++ b/skyfolk/templates/account/base_login-signup.html
@@ -57,7 +57,7 @@
     <div class="namesn">
         <div onclick="javascript:location.href='/'" class="logo">
                 <h5><i>S</i>kyfolk.</h5>
-                     <img src="{{STATIC_URL}}img/logo2.png">
+                     <img src="{{STATIC_URL}}img/logo.png">
         </div>
         </div>
 
