--- a/skyfolk/static/css/timeline.css
+++ b/skyfolk/static/css/timeline.css
@@ -85,6 +85,10 @@
   width: 100%;
   color: #000;
 }
+#section .wrapperx .line #p img {
+  width: 20px;
+  height: 20px;
+}
 #section .wrapperx .line .second .head .fecha_ {
   font-size: 10px;
   float: right;
