--- a/skyfolk/templates/account/base-header.html
+++ b/skyfolk/templates/account/base-header.html
@@ -83,6 +83,7 @@
     <script src="{{STATIC_URL}}js/profile.js"></script>
     <script src="{{STATIC_URL}}js/jquery.colorbox.js"></script>
     <script src="{{STATIC_URL}}js/jquery.shorten.1.0.js"></script>
+    <script src="{{STATIC_URL}}js/jquery.textcomplete.js"></script>
 
 <!-- Sweet Alert -->
 
