--- a/skyfolk/static/css/amigos.css
+++ b/skyfolk/static/css/amigos.css
@@ -39,8 +39,8 @@ html, body {
     margin-top: -80px;
     width: 80px;
     height: 80px;
-    border-radius: 100%;
-    border: 4px solid #fff;
+    border-radius: 3px;
+    box-shadow: 0 1px 5px #1976d2;
     cursor: pointer;
     -webkit-transition: all .3s ease-in;
     -moz-transition: all .3s ease-in;
