+ Version V1 + Mention.js + Mencionar amigos en div comentarios

--- a/skyfolk/templates/account/base-header.html
+++ b/skyfolk/templates/account/base-header.html
@@ -84,7 +84,9 @@
     <script src="{{STATIC_URL}}js/jquery.colorbox.js"></script>
     <script src="{{STATIC_URL}}js/jquery.shorten.1.0.js"></script>
     <script src="{{STATIC_URL}}js/jquery.textcomplete.js"></script>
-
+    <!-- Mentions -->
+    <script src="{{STATIC_URL}}js/mentions/bootstrap-typeahead.js"></script>
+    <script src="{{STATIC_URL}}js/mentions/mention.js"></script>
 <!-- Sweet Alert -->
 
     <link rel="stylesheet" href="{{STATIC_URL}}dist/sweetalert.css">
