--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -672,7 +672,9 @@ $(document).ready(function() {
     },
     dataType: 'json',
     success: function(data) {
-    alert(data.friends);
+    for (i = 0; i < data.friends.length; i++) {
+        alert(data.friends[i].username);
+    }
       $("#message2").mention({
           queryBy: ['name', 'username'],
           users: [{
