--- a/skyfolk/static/css/comentarios.css
+++ b/skyfolk/static/css/comentarios.css
@@ -707,10 +707,9 @@ a.fontawesome-cog:hover {
   width: 100%;
   height: 100px;
   background: #f5f5f5;
-  display: none;
+  display: inline-block;
   border-top: 1px solid #eeeeee;
   position: relative;
-  margin-top: 120px;
 }
 .replay-actual-message .triangle-reply {
   width: 10px;
@@ -730,8 +729,8 @@ a.fontawesome-cog:hover {
   display: block;
   max-width: 100%;
   max-height: 100%;
-  padding-left: 6px;
-  padding-top: 3px;
+  height: 80px;
+  padding: 7px;
   border-style: none;
   overflow: auto;
   border: 1px solid #e0e0e0;
