--- a/skyfolk/static/css/comentarios.css
+++ b/skyfolk/static/css/comentarios.css
@@ -707,9 +707,12 @@ a.fontawesome-cog:hover {
   width: 100%;
   height: 100px;
   background: #f5f5f5;
-  display: inline-block;
+  display: none;
   border-top: 1px solid #eeeeee;
   position: relative;
+}
+.reply-actual-message-show {
+  display: inline-block;
 }
 .replay-actual-message .triangle-reply {
   width: 10px;
