--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -491,6 +491,7 @@
                 <div id="actual-{{item.from_publication__id}}" class="replay-actual-message">
                   <div class="triangle-reply"></div>
                   <textarea name="reply-textarea" rows="4" cols="50"></textarea>
+                    <button class="enviar"><i class="fa fa-paper-plane-o"></i></button>
                 </div>
     </div>
     {% endfor %}
