--- a/skyfolk/static/css/login-signup.css
+++ b/skyfolk/static/css/login-signup.css
@@ -86,7 +86,7 @@ video#bgvid {
   -webkit-transition: all .3s ease-in;
   -moz-transition: all .3s ease-in;
   transition: all .3s ease-in;
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.8); 
 }
 .footer_base a {
   color: #212121;
@@ -96,12 +96,16 @@ video#bgvid {
   transition: all .2s ease-in;
   cursor: pointer;
   text-decoration: none;
+  display: inline-block;
+  position: relative;
+  margin-top: -5px;
 }
 .footer_base a:hover {
   color: #26A69A;
 }
 .footer_base #about, #Blog, #tutorial, #empleo, #anunciarse, #privacidad {
   margin-left: 80px;
+  top: -5px;
 }
 .flex {
   position: relative;
@@ -161,6 +165,8 @@ form {
   margin-right: auto;
   border-top: 2px solid #212121;
   text-align: center;
+  border-bottom-left-radius: 3px;
+  border-bottom-right-radius: 3px;
 }
 .forgot_pswd > .secondaryAction {
   font-size: 16px;
